--- a/themes/zuzu/layouts/partials/script.html
+++ b/themes/zuzu/layouts/partials/script.html
@@ -3,6 +3,7 @@
 <script src="/js/vendor/feather.min.js"></script>
 <script src="/js/vendor/lottie-player.js"></script>
 <script src="/js/vendor/aos.js"></script>
+<script src="/js/vendor/progress-image.js"></script>
 <script>
   feather.replace();
   AOS.init();
