--- a/themes/zuzu/layouts/partials/section/main.html
+++ b/themes/zuzu/layouts/partials/section/main.html
@@ -11,7 +11,7 @@
                 </div>
             </div>
             <div class="col-md-12">
-                <h4 class="section-subtitle text-center">{{.Params.content}}</h4>
+                <h4 class="section-subtitle text-center">{{.Params.subtitle}}</h4>
             </div>
         </div>
         <div class="row">
