--- a/themes/zuzu/static/scss/base/_global.scss
+++ b/themes/zuzu/static/scss/base/_global.scss
@@ -30,7 +30,7 @@
 }
 
 @mixin gradient-background-primary {
-  background-color: image-gradient(90deg, #36b06a 0%, #43a5ba 84.16%);
+  background-color: linear-gradient(90deg, #36b06a 0%, #43a5ba 84.16%);
 }
 
 /** To do: Add Gradient Background Secondary (We already use in banner.scss) */
