--- a/docs/scss/abstract/_variable.scss
+++ b/docs/scss/abstract/_variable.scss
@@ -1,12 +1,14 @@
 // ! MOST OF VALUES HERE ARE BASED ON THEME.TSX IN LEGAL APP
 
-// * PRIORITY
+// * PRIMARY COLOR
 $primary: #3c855a;
 $primaryLight: #4aa570;
 $primaryHover: #408f61;
+$secondary: #9d50bb;
 
 // * BLACK AND WHITE
 $bodyText: #535353;
+$buttonStroke: #21575a;
 $disabledBackground: #dddddd;
 $disabledButtonBackground: #dddddd;
 $disabledText: rgba(0, 0, 0, 0.38);
@@ -25,16 +27,24 @@ $deliveryPrimary: #192841;
 $tableBody: #2e2e2e;
 $labelText: #444444;
 $white: #ffffff;
+$footerBackgroundColor: rgb(234, 236, 240);
 
-// * UNIT
-$baseUnit: 0.8rem;
-$gutter: calc($unit * 3);
+$baseUnit: 0.75rem;
+$gutter: $baseUnit * 3;
 
 // URL VARIABLE
-$base-img-url: '/images';
+$base-img-url: "assets/images";
 
 // FONT-WEIGHT
 $regular: 400;
 $medium: 500;
 $bold: 700;
 $black: 900;
+
+// ANIMATION
+$defualt-easeing: cubic-bezier(0.4, 0.0, 0.2, 1);
+$default-decelerated-easing: cubic-bezier(0.0, 0.0, 0.2, 1);
+$default-accelerated-easing: cubic-bezier(0.4, 0.0, 1, 1);
+$default-duration: 0.121s;
+$default-direction: alternate;
+$default-iteration-count: infinite;
