--- a/docs/scss/layout/_footer.scss
+++ b/docs/scss/layout/_footer.scss
@@ -1,8 +1,6 @@
-@import "../base/typography", "../abstract/variable";
-
 footer {
   width: 100%;
-  background-color: $footerBackgroundColor;
+  background-color: $white;
 
   .footer-inner {
     max-width: 1024px;
@@ -24,14 +22,13 @@ footer {
       }
     }
     .footer-group-title {
-      @extend .text-small;
       margin-bottom: $baseUnit * 0.5;
-      font-weight: $medium;
       color: $bodyText;
+      @include body-text(1.3, $medium);
     }
     .footer-group-list {
-      @extend .text-small;
-      padding: $baseUnit * 0.5 0;
+      padding: $baseUnit * 0.75 0;
+      @include body-text(1.3, $regular);
     }
     .footer-group-list-company-info {
       @extend .footer-group-list;
