--- a/docs/scss/main.scss
+++ b/docs/scss/main.scss
@@ -1,7 +1,9 @@
-/** 
-* ! This file should only contain your imports! 
+/**
+* ! This file should only contain your imports!
 */
 
-@import 'base/_reset', 'base/global.scss', 'base/_typography';
-@import 'components/link', 'components/navigation';
-@import 'layout/footer.scss';
+@import "abstract/variable";
+@import "base/_reset", "base/global", "base/animation", "base/typography", "base/section";
+@import "components/link", "components/button", "components/link", "components/navbar", "components/card",
+    "components/icon", "components/banner", "components/dropdown", "components/lottieplayer";
+@import "layout/footer";
