--- a/themes/zuzu/layouts/partials/head/favicon.html
+++ b/themes/zuzu/layouts/partials/head/favicon.html
@@ -1,11 +1,11 @@
-<link rel="shortcut icon" href={{"/assets/images/favicon/favicon.ico"| absURL }} type="image/x-icon" />
-<link rel="shortcut icon" href={{"/assets//images/favicon/favicon.ico"| relURL }} type="image/x-icon" />
+<link rel="shortcut icon" href={{"/images/favicon/favicon.ico"| absURL }} type="image/x-icon" />
+<link rel="shortcut icon" href={{"/images/favicon/favicon.ico"| relURL }} type="image/x-icon" />
 
 <link rel="icon" href={{"/images/favicon/favicon.ico" | absURL }} type="image/x-icon" />
 <link rel="icon" href={{"/images/favicon/favicon.ico" | relURL }} type="image/x-icon" />
 
 {{/** 
-  * ! MUST CHANGE THE LINKS BELOW  
+  * ! MUST CHANGE THE URL LINKS BELOW  
   */}}
   
 <link
