--- a/themes/zuzu/layouts/partials/head/prerender.html
+++ b/themes/zuzu/layouts/partials/head/prerender.html
@@ -1,8 +1,8 @@
-<link rel="stylesheet" href={{"/css/vendor/bootstrap.min.css" | absURL }} />
+<!-- <link rel="stylesheet" href={{"/css/vendor/bootstrap.min.css" | absURL }} /> -->
 <link rel="stylesheet" href={{"/css/vendor/bootstrap.min.css" | relURL }} />
-<link rel="stylesheet" href={{"/css/vendor/aos.css" | absURL }} />
+<!-- <link rel="stylesheet" href={{"/css/vendor/aos.css" | absURL }} /> -->
 <link rel="stylesheet" href={{"/css/vendor/aos.css" | relURL }} />
-<link rel="stylesheet" href={{"/css/vendor/progress-image.css" | absURL }} />
+<!-- <link rel="stylesheet" href={{"/css/vendor/progress-image.css" | absURL }} /> -->
 <link rel="stylesheet" href={{"/css/vendor/progress-image.css" | relURL }} />
 <link rel="preconnect" href="https://fonts.gstatic.com" />
 <link
@@ -10,5 +10,5 @@
   rel="stylesheet"
 />
 
-<link rel="stylesheet" href={{"/dist/css/main.min.css" | absURL}} />
+<!-- <link rel="stylesheet" href={{"/dist/css/main.min.css" | absURL}} /> -->
 <link rel="stylesheet" href={{"/dist/css/main.min.css" | relURL}} />
