--- a/themes/zuzu/layouts/partials/header/banner.html
+++ b/themes/zuzu/layouts/partials/header/banner.html
@@ -1,11 +1,10 @@
 <div class="banner" role="banner">
     <div class="container">
         <div class="row">
-            <div class="col-9 d-flex">
-                <lottie-player src="{{.Site.Data.banner.promotion.voucher.link}}"  background="transparent"  speed="1"  loop autoplay class="lottie-player-80"></lottie-player>
+            <div class="col-12 d-flex align-items-center">
+                <lottie-player src="/assets/animation/trophy.json"  background="transparent"  speed="1"  loop autoplay class="lottie-player-80"></lottie-player>
                 <div class="d-flex flex-column justify-content-center">
-                    <h5>{{.Site.Data.banner.promotion.voucher.title}}</h5>
-                    <h5>{{.Site.Data.banner.promotion.voucher.content}}</h5>
+                    <div class="banner-title">주주 리걸이 비대면 바우처 <br/> 공급기업으로 선정되었어요!</div>
                 </div>
             </div>
         </div>
