--- a/themes/zuzu/layouts/partials/header/header.html
+++ b/themes/zuzu/layouts/partials/header/header.html
@@ -1,4 +1,4 @@
-<nav class="main-nav navbar navbar-expand-lg" aria-label="main navigation" role="menu">
+<nav class="main-nav navbar navbar-expand-lg" aria-label="main navigation" role="navigation">
   <div class="container navbar-inner">
     <a href="{{ .Site.BaseURL }}" title="주주 리걸" class="navbar-brand">
       <img src={{"/assets/images/logo-with-title.svg"| safeURL}} alt="주주 리걸 로고" class="logo" />
