--- a/themes/zuzu/static/scss/components/_lottieplayer.scss
+++ b/themes/zuzu/static/scss/components/_lottieplayer.scss
@@ -1,4 +1,4 @@
-$size: "80" $baseUnit * 10, "160" $baseUnit * 20, "240" $baseUnit * 30, "480" $baseUnit * 60;
+$size: "40" $baseUnit * 5, "80" $baseUnit * 10, "160" $baseUnit * 20, "240" $baseUnit * 30, "480" $baseUnit * 60;
 
 @each $name, $width in $size {
     .lottie-player-#{$name} {
