--- a/themes/zuzu/layouts/partials/script.html
+++ b/themes/zuzu/layouts/partials/script.html
@@ -1,10 +1,19 @@
-<script src="/js/vendor/jquery.min.js"></script>
-<script src="/js/vendor/bootstrap.js"></script>
-<script src="/js/vendor/feather.min.js"></script>
-<script src="/js/vendor/lottie-player.js"></script>
-<script src="/js/vendor/aos.js"></script>
-<script src="/js/vendor/progress-image.js"></script>
+<script src="{{.Site.BaseURL}}js/vendor/jquery.min.js" type="text/javascript"></script>
+<script src="{{.Site.BaseURL}}js/vendor/bootstrap.js" type="text/javascript"></script>
+<script src="{{.Site.BaseURL}}js/vendor/feather.min.js" type="text/javascript"></script>
+<script src="{{.Site.BaseURL}}js/vendor/lottie-player.js" type="text/javascript"></script>
+<script src="{{.Site.BaseURL}}js/vendor/aos.js" type="text/javascript"></script>
+<script src="{{.Site.BaseURL}}js/vendor/progress-image.js" type="text/javascript"></script>
+<script src="{{.Site.BaseURL}}js/vendor/anime.min.js" type="text/javascript"></script>
+
+<script src="{{.Site.BaseURL}}js/spinner.js" type="text/javascript"></script>
+<script src="{{.Site.BaseURL}}js/counter.js" type="text/javascript"></script>
+<script src="{{.Site.BaseURL}}js/reveal.js" type="text/javascript"></script>
+<script src="{{.Site.BaseURL}}js/attribute.js" type="text/javascript"></script>
 <script>
   feather.replace();
-  AOS.init();
+  AOS.init({
+    duration: 1200,
+    offset: 20,
+  });
 </script>
