--- a/themes/zuzu/static/css/main.css
+++ b/themes/zuzu/static/css/main.css
@@ -1,6 +1,7 @@
 /**
-* ! This file should only contain your imports!
+* ! THIS FILE SHOULD ONLY CONTAIN IMPORTS!
 */
+@use "sass:color";
 *,
 *:before,
 *:after {
@@ -113,6 +114,42 @@ input {
   border-radius: 0;
 }
 
+/** TO DO: ADD GRADIENT BACKGROUND SECONDARY (WE ALREADY USE IN BANNER.SCSS) */
+/** TO DO: CHANGE BOX-SHADOW TO FUNCTION */
+/**
+ * * NOTICE
+  FLUID TYPOGRAPHY SYSTEM
+  https://css-tricks.com/snippets/css/fluid-typography/
+  https://css-tricks.com/simplified-fluid-typography/
+ */
+/**
+ * * TYPE SCALE STARTS;
+ * MAJOR-THIRD(* 1.25) MODULAR TYPE SCALE
+ * https://type-scale.com/
+*/
+html {
+  font-family: "Noto Sans KR", "Noto Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  /** JUST IN CASE THAT YOU'D LIKE TO ACTIVE A SYSTEM FONT ONLY  */
+  font-size: 16px;
+}
+
+@media screen and (max-width: 600px) {
+  html {
+    font-size: calc(14px * 2 / 3);
+  }
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  line-height: 1.75;
+}
+
+/**
+ * * TYPOGRAPHY MIXIN STARTS;
+ */
 .row + .row {
   margin-top: 3rem;
 }
@@ -128,145 +165,113 @@ input {
           transform-style: preserve-3d;
 }
 
-/** To do: Add Gradient Background Secondary (We already use in banner.scss) */
-/** To do: Change box-shadow to function */
 @media screen and (max-width: 768px) {
   *[class^="col-md"] + *[class^="col-md"] {
     margin-top: 2.25rem;
   }
 }
 
-/**
- * * NOTICE
-  FLUID TYPOGRAPHY SYSTEM
-  https://css-tricks.com/snippets/css/fluid-typography/
-  https://css-tricks.com/simplified-fluid-typography/
- */
-/**
- * * TYPE SCALE STARTS;
- * MAJOR-THIRD(* 1.25) MODULAR TYPE SCALE
- * https://type-scale.com/
-*/
-html {
-  font-family: "Noto Sans KR", "Noto Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  /** JUST IN CASE THAT YOU'D LIKE TO ACTIVE A SYSTEM FONT ONLY  */
-  font-size: 14px;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5 {
-  line-height: 1.75;
-}
-
-h1 {
-  margin-top: 0;
-  font-size: 3.052rem;
-  letter-spacing: -0.04rem;
-  font-weight: 900;
-  color: #2e2e2e;
-}
-
-h2 {
-  font-size: 2.441rem;
-  letter-spacing: -0.03rem;
-}
-
-h3 {
-  font-size: 1.953rem;
-  letter-spacing: -0.02rem;
-}
-
-h4 {
-  font-size: 1.563rem;
-  letter-spacing: -0.02rem;
-}
-
-h5 {
-  font-size: 1.25rem;
-  letter-spacing: -0.02rem;
-}
-
-p {
-  font-size: 1rem;
-  line-height: 2;
-  letter-spacing: -0.01rem;
-}
-
-small,
-.text-small {
-  font-size: 0.8rem;
-  letter-spacing: 0.01rem;
-}
-
-/**
- * * TYPE SCALE ENDS;
- */
-/**
- * * TYPOGRAPHY MIXIN STARTS;
- */
 section {
-  padding: 6rem 3rem;
   position: relative;
   z-index: 1;
+  padding: 6rem 3rem;
 }
 
-section.background-dim:after {
-  content: "";
-  background-image: url("/assets/images/background.webp");
-  background-repeat: no-repeat;
-  top: 0;
-  left: 0;
-  position: absolute;
-  background-size: cover;
-  opacity: 0.15;
-  z-index: -1;
-  width: 100%;
-  height: 100%;
+@media screen and (max-width: 600px) {
+  section {
+    padding: 4.5rem 2.25rem;
+  }
 }
 
-section .vh-80 {
-  min-height: 80vh;
+section .main-title {
+  margin-top: 0;
+  font-size: 2.488rem;
+  font-weight: 900;
+  letter-spacing: -0.04rem;
+  color: #2e2e31;
+  line-height: 1.4;
+  color: #2e2e31;
 }
 
-section .section-title {
-  font-size: 2.441rem;
-  font-weight: 700;
-  letter-spacing: -0.03rem;
-  line-height: 1.75;
-  color: #2e2e2e;
-}
-
-section .section-title > h1,
-section .section-title h2,
-section .section-title h3,
-section .section-title h4,
-section .section-title h5,
-section .section-title h6 {
-  line-height: inherit;
-  font-size: inherit;
-  letter-spacing: inherit;
-}
-
-section .section-subtitle {
-  font-size: 1.563rem;
+section .main-subtitle {
+  font-size: 1.44rem;
   font-weight: 500;
   letter-spacing: -0.02rem;
   line-height: 1.75;
   color: #535353;
 }
 
-section .section-subtitle > h1,
-section .section-subtitle h2,
-section .section-subtitle h3,
-section .section-subtitle h4,
-section .section-subtitle h5,
-section .section-subtitle h6 {
-  line-height: inherit;
-  font-size: inherit;
-  letter-spacing: inherit;
+section .section-title {
+  font-size: 2.074rem;
+  font-weight: 700;
+  letter-spacing: -0.03rem;
+  line-height: 1.75;
+  color: #2e2e31;
+  text-align: center;
+}
+
+section .section-title-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+@media screen and (max-width: 600px) {
+  section .section-title-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+section .section-subtitle, section .feature-item-title {
+  font-size: 1.44rem;
+  font-weight: 500;
+  letter-spacing: -0.02rem;
+  line-height: 1.75;
+  color: #535353;
+  text-align: center;
+}
+
+section .section-description {
+  font-size: 1.2rem;
+  font-weight: 500;
+  letter-spacing: -0.02rem;
+  line-height: 2;
+  color: #535353;
+}
+
+section .feature-item {
+  padding: 3rem 1.5rem;
+  margin-top: 3rem;
+}
+
+section .feature-item-title {
+  text-align: left;
+}
+
+.feature-item + .feature-item {
+  margin-top: 6rem;
 }
 
 a.no-decoration {
@@ -309,65 +314,32 @@ a.no-decoration:hover {
 }
 
 .button-large {
-  padding: 1.125rem 2.25rem;
-  font-size: 1.563rem;
+  padding: 1.125rem 1.6875rem;
+  font-size: 1.2rem;
   font-weight: 700;
   letter-spacing: -0.02rem;
   line-height: 1;
-}
-
-.button-large > h1,
-.button-large h2,
-.button-large h3,
-.button-large h4,
-.button-large h5,
-.button-large h6 {
-  line-height: inherit;
-  font-size: inherit;
-  letter-spacing: inherit;
 }
 
 .button-medium {
   padding: 0.75rem 1.125rem;
-  font-size: 1.25rem;
+  font-size: 1.2rem;
   font-weight: 700;
   letter-spacing: -0.02rem;
   line-height: 1;
 }
 
-.button-medium > h1,
-.button-medium h2,
-.button-medium h3,
-.button-medium h4,
-.button-medium h5,
-.button-medium h6 {
-  line-height: inherit;
-  font-size: inherit;
-  letter-spacing: inherit;
-}
-
 .button-small {
   padding: 0.375rem 0.75rem;
-  font-size: 1rem;
+  font-size: 0.8rem;
   font-weight: 400;
-  letter-spacing: -0.01rem;
+  letter-spacing: 0.01rem;
   line-height: 1;
 }
 
-.button-small > h1,
-.button-small h2,
-.button-small h3,
-.button-small h4,
-.button-small h5,
-.button-small h6 {
-  line-height: inherit;
-  font-size: inherit;
-  letter-spacing: inherit;
-}
-
-@media screen and (min-width: 368px) and (max-width: 768px) {
+@media screen and (max-width: 600px) {
   .button-small {
-    font-size: 1.25rem;
+    font-size: 1.1rem;
   }
 }
 
@@ -446,6 +418,7 @@ nav.main-nav .navbar-brand {
 
 nav.main-nav .navbar-brand .logo {
   width: 6.75rem;
+  min-width: 96px;
 }
 
 nav.main-nav .navbar-collapse {
@@ -455,28 +428,17 @@ nav.main-nav .navbar-collapse {
 }
 
 nav.main-nav .nav-item .nav-link {
-  font-size: 1rem;
+  font-size: 0.8rem;
   font-weight: 400;
-  letter-spacing: -0.01rem;
+  letter-spacing: 0.01rem;
   line-height: 1;
   color: #535353;
   padding: 0.375rem 0.75rem;
 }
 
-nav.main-nav .nav-item .nav-link > h1,
-nav.main-nav .nav-item .nav-link h2,
-nav.main-nav .nav-item .nav-link h3,
-nav.main-nav .nav-item .nav-link h4,
-nav.main-nav .nav-item .nav-link h5,
-nav.main-nav .nav-item .nav-link h6 {
-  line-height: inherit;
-  font-size: inherit;
-  letter-spacing: inherit;
-}
-
-@media screen and (min-width: 368px) and (max-width: 768px) {
+@media screen and (max-width: 600px) {
   nav.main-nav .nav-item .nav-link {
-    font-size: 1.25rem;
+    font-size: 1.1rem;
   }
 }
 
@@ -490,8 +452,8 @@ nav.main-nav .active .nav-link {
   font-weight: inherit;
 }
 
-/**
-    * * Override the default Bootstrap in the mobile and table viewport
+/** 
+    * * Override the default Bootstrap in the mobile and table viewport 
 */
 @media (max-width: 992px) {
   .navbar-collapse {
@@ -508,6 +470,8 @@ nav.main-nav .active .nav-link {
     left: -75%;
     -webkit-transition: height 0s ease-out;
     transition: height 0s ease-out;
+  }
+  .navbar-collapse.collapsing .navbar-collapse.show {
     left: 0;
     -webkit-transition: left 300ms ease-out;
     transition: left 300ms ease-out;
@@ -529,25 +493,15 @@ nav.main-nav .active .nav-link {
   /** To do: Add a card title */
 }
 
-.custom-card-description {
+.custom-card-content {
   max-width: 100%;
   word-break: break-all;
   word-wrap: break-word;
-  font-size: 1.25rem;
-  font-weight: 500;
+  font-size: 1.2rem;
+  font-weight: 400;
   letter-spacing: -0.02rem;
   line-height: 2;
-}
-
-.custom-card-description > h1,
-.custom-card-description h2,
-.custom-card-description h3,
-.custom-card-description h4,
-.custom-card-description h5,
-.custom-card-description h6 {
-  line-height: inherit;
-  font-size: inherit;
-  letter-spacing: inherit;
+  color: #535353;
 }
 
 .custom-card-meta {
@@ -574,146 +528,97 @@ nav.main-nav .active .nav-link {
 
 .custom-card-meta-text {
   font-size: 1rem;
-  font-weight: 700;
+  font-weight: 400;
   letter-spacing: -0.01rem;
-  line-height: 1.3;
+  line-height: 1.75;
+  color: #2e2e31;
 }
 
-.custom-card-meta-text > h1,
-.custom-card-meta-text h2,
-.custom-card-meta-text h3,
-.custom-card-meta-text h4,
-.custom-card-meta-text h5,
-.custom-card-meta-text h6 {
-  line-height: inherit;
-  font-size: inherit;
-  letter-spacing: inherit;
-}
-
-@media screen and (min-width: 368px) and (max-width: 768px) {
+@media screen and (max-width: 600px) {
   .custom-card-meta-text {
     font-size: 1.25rem;
   }
 }
 
+@use "sass:color";
 .custom-icon-8 {
   width: 0.75rem;
-  margin-left: 0.25rem;
-  margin-right: 0.25rem;
 }
 
-.feather-icon8 {
+.feather-icon-8 {
   width: 0.75rem;
-  margin-left: 0.25rem;
-  margin-right: 0.25rem;
 }
 
 .custom-icon-16 {
   width: 1.5rem;
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
 }
 
-.feather-icon16 {
+.feather-icon-16 {
   width: 1.5rem;
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
 }
 
 .custom-icon-24 {
   width: 2.25rem;
-  margin-left: 0.75rem;
-  margin-right: 0.75rem;
 }
 
-.feather-icon24 {
+.feather-icon-24 {
   width: 2.25rem;
-  margin-left: 0.75rem;
-  margin-right: 0.75rem;
 }
 
 .custom-icon-32 {
   width: 3rem;
-  margin-left: 1rem;
-  margin-right: 1rem;
 }
 
-.feather-icon32 {
+.feather-icon-32 {
   width: 3rem;
-  margin-left: 1rem;
-  margin-right: 1rem;
 }
 
 .custom-icon-40 {
   width: 3.75rem;
-  margin-left: 1.25rem;
-  margin-right: 1.25rem;
 }
 
-.feather-icon40 {
+.feather-icon-40 {
   width: 3.75rem;
-  margin-left: 1.25rem;
-  margin-right: 1.25rem;
 }
 
 .custom-icon-48 {
   width: 4.5rem;
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
 }
 
-.feather-icon48 {
+.feather-icon-48 {
   width: 4.5rem;
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
 }
 
 .custom-icon-56 {
   width: 5.25rem;
-  margin-left: 1.75rem;
-  margin-right: 1.75rem;
 }
 
-.feather-icon56 {
+.feather-icon-56 {
   width: 5.25rem;
-  margin-left: 1.75rem;
-  margin-right: 1.75rem;
 }
 
 .custom-icon-64 {
   width: 6rem;
-  margin-left: 2rem;
-  margin-right: 2rem;
 }
 
-.feather-icon64 {
+.feather-icon-64 {
   width: 6rem;
-  margin-left: 2rem;
-  margin-right: 2rem;
 }
 
 .custom-icon-72 {
   width: 6.75rem;
-  margin-left: 2.25rem;
-  margin-right: 2.25rem;
 }
 
-.feather-icon72 {
+.feather-icon-72 {
   width: 6.75rem;
-  margin-left: 2.25rem;
-  margin-right: 2.25rem;
 }
 
 .custom-icon-80 {
   width: 7.5rem;
-  margin-left: 2.5rem;
-  margin-right: 2.5rem;
 }
 
-.feather-icon80 {
+.feather-icon-80 {
   width: 7.5rem;
-  margin-left: 2.5rem;
-  margin-right: 2.5rem;
 }
 
 .banner {
@@ -730,6 +635,14 @@ nav.main-nav .active .nav-link {
   -webkit-animation: GradientAnimation 4s ease-out infinite;
           animation: GradientAnimation 4s ease-out infinite;
   color: #ffffff;
+}
+
+.banner-title {
+  font-size: 1.2rem;
+  font-weight: 700;
+  letter-spacing: -0.02rem;
+  line-height: 1.4;
+  margin-left: 0.75rem;
 }
 
 @-webkit-keyframes GradientAnimation {
@@ -770,28 +683,17 @@ nav.main-nav .active .nav-link {
 }
 
 .custom-dropdown-menu .custom-dropdown-item {
-  font-size: 1rem;
+  font-size: 0.8rem;
   font-weight: 400;
-  letter-spacing: -0.01rem;
+  letter-spacing: 0.01rem;
   line-height: 1;
   padding: 0.75rem 2.25rem;
   color: #535353;
 }
 
-.custom-dropdown-menu .custom-dropdown-item > h1,
-.custom-dropdown-menu .custom-dropdown-item h2,
-.custom-dropdown-menu .custom-dropdown-item h3,
-.custom-dropdown-menu .custom-dropdown-item h4,
-.custom-dropdown-menu .custom-dropdown-item h5,
-.custom-dropdown-menu .custom-dropdown-item h6 {
-  line-height: inherit;
-  font-size: inherit;
-  letter-spacing: inherit;
-}
-
-@media screen and (min-width: 368px) and (max-width: 768px) {
+@media screen and (max-width: 600px) {
   .custom-dropdown-menu .custom-dropdown-item {
-    font-size: 1.25rem;
+    font-size: 1.1rem;
   }
 }
 
@@ -809,21 +711,15 @@ nav.main-nav .active .nav-link {
   line-height: 1;
 }
 
-.custom-dropdown-menu .active > h1,
-.custom-dropdown-menu .active h2,
-.custom-dropdown-menu .active h3,
-.custom-dropdown-menu .active h4,
-.custom-dropdown-menu .active h5,
-.custom-dropdown-menu .active h6 {
-  line-height: inherit;
-  font-size: inherit;
-  letter-spacing: inherit;
-}
-
-@media screen and (min-width: 368px) and (max-width: 768px) {
+@media screen and (max-width: 600px) {
   .custom-dropdown-menu .active {
     font-size: 1.25rem;
   }
+}
+
+.lottie-player-40 {
+  width: 3.75rem;
+  height: 3.75rem;
 }
 
 .lottie-player-80 {
@@ -844,6 +740,54 @@ nav.main-nav .active .nav-link {
 .lottie-player-480 {
   width: 45rem;
   height: 45rem;
+}
+
+.reveal-item {
+  margin-bottom: 0.75rem;
+  background-color: #ffffff;
+  border: 1px solid #e6e6e6;
+  border-radius: 0.5625rem;
+  padding: 2.25rem 1.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.reveal-item-title {
+  font-size: 1rem;
+  font-weight: 500;
+  letter-spacing: -0.01rem;
+  line-height: 1.3;
+  color: #535353;
+}
+
+@media screen and (max-width: 600px) {
+  .reveal-item-title {
+    font-size: 1.25rem;
+  }
+}
+
+.reveal-item-content {
+  font-size: 1.2rem;
+  font-weight: 700;
+  letter-spacing: -0.02rem;
+  line-height: 1.5;
+  color: #4aa570;
+}
+
+.reveal-item-image {
+  margin-right: 0.75rem;
+  border-radius: 100%;
 }
 
 footer {
@@ -874,56 +818,29 @@ footer .footer-group .footer-group-list-company-info p {
 footer .footer-group .footer-group-title {
   margin-bottom: 0.375rem;
   color: #535353;
-  font-size: 1rem;
+  font-size: 0.8rem;
   font-weight: 500;
-  letter-spacing: -0.01rem;
+  letter-spacing: 0.01rem;
   line-height: 1.3;
 }
 
-footer .footer-group .footer-group-title > h1,
-footer .footer-group .footer-group-title h2,
-footer .footer-group .footer-group-title h3,
-footer .footer-group .footer-group-title h4,
-footer .footer-group .footer-group-title h5,
-footer .footer-group .footer-group-title h6 {
-  line-height: inherit;
-  font-size: inherit;
-  letter-spacing: inherit;
-}
-
-@media screen and (min-width: 368px) and (max-width: 768px) {
+@media screen and (max-width: 600px) {
   footer .footer-group .footer-group-title {
-    font-size: 1.25rem;
+    font-size: 1.1rem;
   }
 }
 
 footer .footer-group .footer-group-list, footer .footer-group .footer-group-list-company-info {
   padding: 0.5625rem 0;
-  font-size: 1rem;
+  font-size: 0.8rem;
   font-weight: 400;
-  letter-spacing: -0.01rem;
+  letter-spacing: 0.01rem;
   line-height: 1.3;
 }
 
-footer .footer-group .footer-group-list > h1, footer .footer-group .footer-group-list-company-info > h1,
-footer .footer-group .footer-group-list h2,
-footer .footer-group .footer-group-list-company-info h2,
-footer .footer-group .footer-group-list h3,
-footer .footer-group .footer-group-list-company-info h3,
-footer .footer-group .footer-group-list h4,
-footer .footer-group .footer-group-list-company-info h4,
-footer .footer-group .footer-group-list h5,
-footer .footer-group .footer-group-list-company-info h5,
-footer .footer-group .footer-group-list h6,
-footer .footer-group .footer-group-list-company-info h6 {
-  line-height: inherit;
-  font-size: inherit;
-  letter-spacing: inherit;
-}
-
-@media screen and (min-width: 368px) and (max-width: 768px) {
+@media screen and (max-width: 600px) {
   footer .footer-group .footer-group-list, footer .footer-group .footer-group-list-company-info {
-    font-size: 1.25rem;
+    font-size: 1.1rem;
   }
 }
 
