--- a/themes/zuzu/static/scss/abstract/_variable.scss
+++ b/themes/zuzu/static/scss/abstract/_variable.scss
@@ -1,4 +1,5 @@
 // ! MOST OF VALUES HERE ARE BASED ON THEME.TSX IN LEGAL APP
+@use "sass:color";
 
 // * PRIMARY COLOR
 $primary: #3c855a;
@@ -19,16 +20,15 @@ $placeholder: rgba(0, 0, 0, 0.6);
 $popupBackground: rgba(0, 0, 0, 0.502);
 $secondaryButtonBackground: #fafbfc;
 $secondaryButtonStroke: rgba(27, 31, 35, 0.2);
-$subtitleText: #2e2e2e;
+$subtitleText: #2e2e31;
 $tableHeader: #535353;
 $tableBackground: #f2f2f2;
 $borderColor: #e3e3e3;
 $deliveryPrimary: #192841;
-$tableBody: #2e2e2e;
+$tableBody: #2e2e31;
 $labelText: #444444;
 $white: #ffffff;
 $footerBackgroundColor: rgb(234, 236, 240);
-
 $baseUnit: 0.75rem;
 $gutter: $baseUnit * 3;
 
@@ -42,9 +42,15 @@ $bold: 700;
 $black: 900;
 
 // ANIMATION
-$defualt-easeing: cubic-bezier(0.4, 0.0, 0.2, 1);
-$default-decelerated-easing: cubic-bezier(0.0, 0.0, 0.2, 1);
-$default-accelerated-easing: cubic-bezier(0.4, 0.0, 1, 1);
+$defualt-easeing: cubic-bezier(0.4, 0, 0.2, 1);
+$default-decelerated-easing: cubic-bezier(0, 0, 0.2, 1);
+$default-accelerated-easing: cubic-bezier(0.4, 0, 1, 1);
 $default-duration: 0.121s;
 $default-direction: alternate;
 $default-iteration-count: infinite;
+
+$xs: 0px;
+$sm: 600px;
+$md: 960px;
+$lg: 1280px;
+$xl: 1920px;
