--- a/themes/zuzu/static/scss/base/_typography.scss
+++ b/themes/zuzu/static/scss/base/_typography.scss
@@ -18,7 +18,10 @@ html {
   // font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
   //   "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 
-  font-size: 14px;
+  font-size: 16px;
+  @include media-break-point-down {
+    font-size: calc(14px * 2 / 3);
+  }
 }
 
 h1,
@@ -29,113 +32,49 @@ h5 {
   line-height: 1.75;
 }
 
-h1 {
-  margin-top: 0;
-  font-size: 3.052rem;
-  letter-spacing: -0.04rem;
-  font-weight: $black;
-  color: $subtitleText;
-}
-
-h2 {
-  font-size: 2.441rem;
-  letter-spacing: -0.03rem;
-}
-
-h3 {
-  font-size: 1.953rem;
-  letter-spacing: -0.02rem;
-}
-
-h4 {
-  font-size: 1.563rem;
-  letter-spacing: -0.02rem;
-}
-
-h5 {
-  font-size: 1.25rem;
-  letter-spacing: -0.02rem;
-}
-
-p {
-  font-size: 1rem;
-  line-height: 2;
-  letter-spacing: -0.01rem;
-}
-
-small,
-.text-small {
-  font-size: 0.8rem;
-  letter-spacing: 0.01rem;
-}
-
-/**
- * * TYPE SCALE ENDS;
- */
-
 /**
  * * TYPOGRAPHY MIXIN STARTS;
  */
 
-@mixin inherit-text-property {
-  & > h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    line-height: inherit;
-    font-size: inherit;
-    letter-spacing: inherit;
-  }
-}
-
 @mixin heading1($line-height, $font-weight: $black) {
   margin-top: 0;
-  font-size: 3.052rem;
+  font-size: 2.488rem;
   font-weight: $font-weight;
   letter-spacing: -0.04rem;
   color: $subtitleText;
   line-height: $line-height;
-  @include inherit-text-property;
 }
 
 @mixin heading2($line-height, $font-weight: $bold) {
-  font-size: 2.441rem;
+  font-size: 2.074rem;
   font-weight: $font-weight;
   letter-spacing: -0.03rem;
   line-height: $line-height;
-  @include inherit-text-property;
 }
 @mixin heading3($line-height, $font-weight: $bold) {
-  font-size: 1.953rem;
+  font-size: 1.728rem;
   font-weight: $font-weight;
   letter-spacing: -0.02rem;
   line-height: $line-height;
-  @include inherit-text-property;
 }
 @mixin heading4($line-height, $font-weight: $medium) {
-  font-size: 1.563rem;
+  font-size: 1.44rem;
   font-weight: $font-weight;
   letter-spacing: -0.02rem;
   line-height: $line-height;
-  @include inherit-text-property;
 }
 @mixin heading5($line-height, $font-weight: $medium) {
-  font-size: 1.25rem;
+  font-size: 1.2rem;
   font-weight: $font-weight;
   letter-spacing: -0.02rem;
   line-height: $line-height;
-  @include inherit-text-property;
 }
 @mixin body-text($line-height, $font-weight: $bold) {
   font-size: 1rem;
   font-weight: $font-weight;
   letter-spacing: -0.01rem;
   line-height: $line-height;
-  @include inherit-text-property;
-
-  @media screen and (min-width: 368px) and (max-width: 768px) {
+  @include media-break-point-down {
     font-size: 1.25rem;
   }
 }
@@ -144,5 +83,7 @@ small,
   font-weight: $font-weight;
   letter-spacing: 0.01rem;
   line-height: $line-height;
-  @include inherit-text-property;
+  @include media-break-point-down {
+    font-size: 1.1rem;
+  }
 }
