--- a/themes/zuzu/static/scss/components/_button.scss
+++ b/themes/zuzu/static/scss/components/_button.scss
@@ -15,8 +15,8 @@
   * * BUTTON SIZE: large, medium, small
   */
   &-large {
-    padding: $baseUnit * 1.5 $baseUnit * 3;
-    @include heading4(1, $bold);
+    padding: $baseUnit * 1.5 $baseUnit * 1.5 * 1.5;
+    @include heading5(1, $bold);
   }
   &-medium {
     padding: $baseUnit * 1 $baseUnit * 1.5;
@@ -24,7 +24,7 @@
   }
   &-small {
     padding: $baseUnit * 0.5 $baseUnit;
-    @include body-text(1, $regular);
+    @include caption(1, $regular);
   }
 
   /**
