--- a/themes/zuzu/static/scss/components/_dropdown.scss
+++ b/themes/zuzu/static/scss/components/_dropdown.scss
@@ -12,7 +12,7 @@
     border-color: $hr;
 
     .custom-dropdown-item {
-        @include body-text(1, $regular);
+        @include caption(1, $regular);
         padding: $baseUnit $baseUnit * 3;
         color: $bodyText;
         &:active {
