--- a/themes/zuzu/static/scss/components/_navbar.scss
+++ b/themes/zuzu/static/scss/components/_navbar.scss
@@ -12,6 +12,7 @@ nav {
       padding: $baseUnit * 0.5 $baseUnit;
       .logo {
         width: $baseUnit * 9;
+        min-width: 96px;
       }
     }
 
@@ -22,7 +23,7 @@ nav {
 
     .nav-item {
       .nav-link {
-        @include body-text(1, $regular);
+        @include caption(1, $regular);
         color: $bodyText;
         padding: $baseUnit * 0.5 $baseUnit;
       }
@@ -59,9 +60,9 @@ nav {
     transition: height 0s ease-out;
 
     .navbar-collapse.show {
+      left: 0;
+      transition: left 300ms ease-out;
     }
-    left: 0;
-    transition: left 300ms ease-out;
   }
 
   .navbar-toggler.collapsed ~ .navbar-collapse {
