--- a/themes/zuzu/static/scss/layout/_footer.scss
+++ b/themes/zuzu/static/scss/layout/_footer.scss
@@ -24,11 +24,11 @@ footer {
     .footer-group-title {
       margin-bottom: $baseUnit * 0.5;
       color: $bodyText;
-      @include body-text(1.3, $medium);
+      @include caption(1.3, $medium);
     }
     .footer-group-list {
       padding: $baseUnit * 0.75 0;
-      @include body-text(1.3, $regular);
+      @include caption(1.3, $regular);
     }
     .footer-group-list-company-info {
       @extend .footer-group-list;
