--- a/themes/zuzu/static/scss/main.scss
+++ b/themes/zuzu/static/scss/main.scss
@@ -1,9 +1,9 @@
 /**
-* ! This file should only contain your imports!
+* ! THIS FILE SHOULD ONLY CONTAIN IMPORTS!
 */
 
 @import "abstract/variable";
-@import "base/_reset", "base/global", "base/animation", "base/typography", "base/section";
+@import "base/_reset", "base/mixin", "base/typography", "base/global", "base/section", "base/animation";
 @import "components/link", "components/button", "components/link", "components/navbar", "components/card",
-    "components/icon", "components/banner", "components/dropdown", "components/lottieplayer";
+    "components/icon", "components/banner", "components/dropdown", "components/lottieplayer", "components/reveal-item";
 @import "layout/footer";
