--- a/themes/zuzu/layouts/partials/section/cta.html
+++ b/themes/zuzu/layouts/partials/section/cta.html
@@ -15,9 +15,11 @@
                     class="button button-large button-primary">
                     <span>
                         {{.Site.Data.label.button.demoStart}}
-                    </span></button>
+                    </span>
+                        <i data-feather="chevron-right" width="20" stroke-width="3"></i>
+                </button>
             </div>
-            <p class="cta-caption">어떤 추가 결제도 필요하지 않아요.</p>
+            <p class="cta-caption">데모 체험은 어떤 추가 결제도 필요하지 않아요.</p>
         </div>
     </div>
 
