--- a/themes/zuzu/layouts/partials/section/customer.html
+++ b/themes/zuzu/layouts/partials/section/customer.html
@@ -1,8 +1,7 @@
 <section id="customer" class="target-section section background-light">
     <div class="container">
         <div class="row">
-            <img src="/assets/images/pack/GroovySittingDoodle.svg"
-        style="position: absolute; z-index:-1; width:15rem;"
+            <img src="/assets/images/pack/GroovySittingDoodle.svg" class="section-anchor-image"
         alt="customer-image-doodle">
                 <h2 class="section-title text-center">
                     6개월 만에 <span data-countup class="highlight">1447</span>명이 넘는 대표님이 가입하셨어요
