--- a/themes/zuzu/layouts/partials/section/statistics.html
+++ b/themes/zuzu/layouts/partials/section/statistics.html
@@ -1,5 +1,5 @@
     <div class="row justify-content-center">
-        <div class="col-md-10 panel statistics" data-aos="fade-up"
+        <div class="col-md-10 panel-large statistics" data-aos="fade-up"
             data-aos-duration="732" data-aos-offset="20"
             data-aos-anchor=".statistics">
             <div class="row reveal-row-wrapper">
