--- a/themes/zuzu/layouts/index.html
+++ b/themes/zuzu/layouts/index.html
@@ -18,7 +18,7 @@
                         <div class="d-flex align-items-center justify-content-center">
                             <button class="button button-large
                                 button-secondary">
-                                <span style="line-height:32px;">로그인</span>
+                                <span style="line-height:2.4rem">로그인하기</span>
                             </button>
                             <button class="button button-large button-primary">
                                 <lottie-player
@@ -31,6 +31,7 @@
                     </div>
                 </div>
                 {{- partial "section/main/feature.html" . -}}
+                {{- partial "section/voucher.html" . -}}
             </div>
         </section>
 
