--- a/themes/zuzu/layouts/partials/section/main/feature.html
+++ b/themes/zuzu/layouts/partials/section/main/feature.html
@@ -1,44 +1,53 @@
-<section class="section">
+<section class="section feature" id="feature">
   <div class="container">
     <div class="row">
       <h4 class="section-subtitle">
         <span class="highlight">주주 리걸에 대해 알려드릴게요!</span>
       </h4>
     </div>
-    <div class="row justify-content-center">
+    <div class="row down-sm-row-reverse justify-content-center">
       <div class="col-md-2">
-        <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist"
+        <div class="nav nav-pills" id="v-pills-tab" role="tablist"
           aria-orientation="vertical">
           <a class="nav-link nav-divider" data-toggle="pill" role="tab"
             aria-controls="v-pills-home"
             aria-selected="true">주요 지원 안건</a>
           <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill"
             href="#v-pills-home" role="tab" aria-controls="v-pills-home"
-            aria-selected="true"><i data-feather="chevron-right"></i>스톡옵션 부여</a>
+            aria-selected="true"><i data-feather="gift" stroke-width="3"
+              width="20"></i>
+            <span>
+              스톡옵션
+            </span></a>
           <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill"
             href="#v-pills-profile" role="tab" aria-controls="v-pills-profile"
-            aria-selected="false"><i data-feather="chevron-right"></i> 유상증자</a>
-            <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill"
+            aria-selected="false"><i data-feather="dollar-sign" stroke-width="3"
+              width="20"></i>
+            <span>
+              유상증자
+            </span></a>
+          <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill"
             href="#v-pills-profile" role="tab" aria-controls="v-pills-profile"
-            aria-selected="false"><i data-feather="chevron-right"></i> 임원변경</a>
-
+            aria-selected="false"><i data-feather="users" stroke-width="3"
+              width="20"></i>
+            <span>임원 변경</span></a>
           <a href="#" class="nav-link more">
             <i data-feather="arrow-right" width="14" height="14"></i> 안건 모두 보기</a>
-
           <a class="nav-link nav-divider" data-toggle="pill" role="tab"
             aria-controls="v-pills-home"
             aria-selected="true">지원 등기 방법</a>
           <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill"
             href="#v-pills-messages" role="tab" aria-controls="v-pills-messages"
-            aria-selected="false"><i data-feather="chevron-right"></i> 셀프 등기</a>
+            aria-selected="false"><i data-feather="award"></i>
+            <span>셀프 등기</span></a>
           <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill"
             href="#v-pills-settings" role="tab" aria-controls="v-pills-settings"
-            aria-selected="false"><i data-feather="chevron-right"></i> 등기 대행</a>
+            aria-selected="false"><i data-feather="briefcase"></i>
+            <span>등기 대행</span></a>
         </div>
       </div>
 
       <div class="col-md-10">
-        
         <!-- STOCKOPTION DETAIL STARTS -->
         <div class="tab-content" id="v-pills-tabContent">
           <div class="tab-pane fade show active" id="v-pills-home"
@@ -49,8 +58,6 @@
               gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           <!-- STOCKOPTION DETAIL ENDS -->
-
-
           <div class="tab-pane fade" id="v-pills-profile" role="tabpanel"
             aria-labelledby="v-pills-profile-tab">Video</div>
           <div class="tab-pane fade" id="v-pills-messages" role="tabpanel"
