--- a/themes/zuzu/layouts/shortcodes/pricing/pricing.html
+++ b/themes/zuzu/layouts/shortcodes/pricing/pricing.html
@@ -1,21 +1,21 @@
 <section id="pricing" class="pricing section">
     <div class="container text-center">
         <h2 class="section-title">요금제</h2>
-        <h4 class="section-subtitle">베이직 요금제와 프리미엄 요금제 중 원하시는 요금제를 선택하세요.</h4>
+        <h4 class="section-subtitle">베이직과 프리미엄 중 원하시는 요금제를 선택하세요</h4>
         <div class="table-responsive">  
             <table class="table table-bordered">
                 <thead class="thead-light">
                     <tr>
                         <th scope="col"></th>
-                        <th scope="col">베이직 요금제</th>
+                        <th scope="col">베이직</th>
                         <th scope="col">
-                            <span>프리미엄 요금제</span></th>
+                        <span>프리미엄</span></th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
                         <th scope="row">구독료</th>
-                        <td>무료</td>
+                        <td>무료(기본)</td>
                         <td>
                             <div>월 단위 결제: 30,000원(매월)</div>
                             <div>1년 단위 결제: 360,000원
@@ -32,16 +32,15 @@
 
     <div class="container text-center">
         <h2 class="section-title">등기 문서 생성 비용</h2>
-        <h4 class="section-subtitle">* 요금제 가격은 셀프 등기 기준이며 대행 시에는 추가 비용이
-            발생해요.
+        <h4 class="section-subtitle">요금제 가격은 셀프 등기 기준이며 등기 대행 시에는 추가 비용이 발생해요
         </h4>
         <div class="table-responsive">
             <table class="table table-bordered">
                 <thead class="thead-light">
                     <tr>
                         <th scope="col"></th>
-                        <th scope="col">베이직 요금제</th>
-                        <th scope="col"><span>프리미엄 요금제</span></th>
+                        <th scope="col">베이직</th>
+                        <th scope="col"><span>프리미엄</span></th>
                         <th scope="col">등기 대행 추가 비용</th>
                     </tr>
                 </thead>
@@ -128,8 +127,8 @@
                 <thead class="thead-light">
                     <tr>
                         <th scope="col"></th>
-                        <th scope="col">베이직 요금제</th>
-                        <th scope="col"><span>프리미엄 요금제</span></th>
+                        <th scope="col">베이직</th>
+                        <th scope="col"><span>프리미엄</span></th>
                         <th scope="col">등기 대행 추가 비용</th>
                     </tr>
                 </thead>
@@ -151,8 +150,8 @@
                 <thead class="thead-light">
                     <tr>
                         <th scope="col"></th>
-                        <th scope="col">베이직 요금제</th>
-                        <th scope="col"><span>프리미엄 요금제</span></th>
+                        <th scope="col">베이직</th>
+                        <th scope="col"><span>프리미엄</span></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -196,8 +195,8 @@
                 <thead class="thead-light">
                     <tr>
                         <th scope="col"></th>
-                        <th scope="col">베이직 요금제</th>
-                        <th scope="col"><span>프리미엄 요금제</span></th>
+                        <th scope="col">베이직</th>
+                        <th scope="col"><span>프리미엄</span></th>
                     </tr>
                 </thead>
                 <tbody>
