--- a/themes/zuzu/static/css/main.css
+++ b/themes/zuzu/static/css/main.css
@@ -116,6 +116,15 @@ input {
 
 /** TO DO: ADD GRADIENT BACKGROUND SECONDARY (WE ALREADY USE IN BANNER.SCSS) */
 /** TO DO: CHANGE BOX-SHADOW TO FUNCTION */
+@media screen and (max-width: 600px) {
+  .down-sm-row-reverse {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+  }
+}
+
 /**
  * * NOTICE
   FLUID TYPOGRAPHY SYSTEM
@@ -135,7 +144,7 @@ html {
 
 @media screen and (max-width: 600px) {
   html {
-    font-size: calc(14px * 2 / 3);
+    font-size: calc(16px * 2 / 3);
   }
 }
 
@@ -329,6 +338,19 @@ section .section-description {
   color: #535353;
 }
 
+section .section-anchor-image {
+  position: absolute;
+  z-index: -1;
+  width: 15rem;
+  right: 0;
+}
+
+@media screen and (max-width: 600px) {
+  section .section-anchor-image {
+    bottom: 0;
+  }
+}
+
 section .feature-item {
   padding: 3rem 1.5rem;
   margin-top: 3rem;
@@ -346,12 +368,86 @@ section.background-light {
   background-color: #f5efe0;
 }
 
-.panel {
+.panel-large {
   padding: 0.75rem;
 }
 
+.panel-medium {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 1.5rem;
+  background-color: #f8f8f8;
+  border-radius: 0.5625rem;
+}
+
+@media screen and (max-width: 600px) {
+  .panel-medium {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+.panel-medium-text-wrapper {
+  margin-left: 1.5rem;
+}
+
+.panel-medium-title {
+  -ms-flex-preferred-size: 1;
+      flex-basis: 1;
+  margin-bottom: 1.5rem;
+  font-size: 1.25rem;
+  font-weight: 700;
+  letter-spacing: -0.02rem;
+  line-height: 1;
+  color: #2e2e31;
+}
+
+.panel-medium-subtitle {
+  -ms-flex-preferred-size: 1;
+      flex-basis: 1;
+  font-size: 1rem;
+  font-weight: 500;
+  letter-spacing: -0.01rem;
+  line-height: 1.75;
+  color: #535353;
+}
+
+@media screen and (max-width: 600px) {
+  .panel-medium-subtitle {
+    font-size: 1.25rem;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .panel-medium-image {
+    display: none;
+  }
+}
+
 a.no-decoration {
-  color: rgba(0, 0, 0, 0.38);
+  color: #9e9e9e;
   text-decoration: none;
 }
 
@@ -394,8 +490,8 @@ a.no-decoration:hover {
 .button:hover > svg {
   -webkit-transition: all cubic-bezier(0.4, 0, 0.2, 1) 0.121s;
   transition: all cubic-bezier(0.4, 0, 0.2, 1) 0.121s;
-  -webkit-transform: translateX(3px);
-          transform: translateX(3px);
+  -webkit-transform: translateX(8px);
+          transform: translateX(8px);
 }
 
 .button + .button {
@@ -425,16 +521,22 @@ a.no-decoration:hover {
 
 @media screen and (max-width: 600px) {
   .button-large span.symbol {
-    font-size: 1.1rem;
+    font-size: 1.25rem;
   }
 }
 
 .button-medium {
   padding: 0.75rem 1.125rem;
-  font-size: 1.25rem;
+  font-size: 1rem;
   font-weight: 700;
-  letter-spacing: -0.02rem;
+  letter-spacing: -0.01rem;
   line-height: 1;
+}
+
+@media screen and (max-width: 600px) {
+  .button-medium {
+    font-size: 1.25rem;
+  }
 }
 
 .button-small {
@@ -447,7 +549,7 @@ a.no-decoration:hover {
 
 @media screen and (max-width: 600px) {
   .button-small {
-    font-size: 1.1rem;
+    font-size: 1.25rem;
   }
 }
 
@@ -472,7 +574,7 @@ a.no-decoration:hover {
 }
 
 a.no-decoration {
-  color: rgba(0, 0, 0, 0.38);
+  color: #9e9e9e;
   text-decoration: none;
 }
 
@@ -497,6 +599,12 @@ nav.main-nav .navbar-inner {
   padding: 0.75rem 0;
 }
 
+@media screen and (max-width: 600px) {
+  nav.main-nav .navbar-inner {
+    padding: 0.75rem 1.5rem;
+  }
+}
+
 nav.main-nav .navbar-brand {
   padding: 0.375rem 0.75rem;
 }
@@ -512,6 +620,14 @@ nav.main-nav .navbar-collapse {
           justify-content: space-between;
 }
 
+@media screen and (max-width: 600px) {
+  nav.main-nav .navbar-collapse {
+    padding: 2.25rem 1.5rem;
+    -webkit-box-shadow: 0 8px 14px 0 rgba(56, 64, 82, 0.08), 0 4px 6px 0 rgba(0, 0, 0, 0.12);
+            box-shadow: 0 8px 14px 0 rgba(56, 64, 82, 0.08), 0 4px 6px 0 rgba(0, 0, 0, 0.12);
+  }
+}
+
 nav.main-nav .nav-item .nav-link {
   font-size: 0.9rem;
   font-weight: 400;
@@ -523,13 +639,31 @@ nav.main-nav .nav-item .nav-link {
 
 @media screen and (max-width: 600px) {
   nav.main-nav .nav-item .nav-link {
-    font-size: 1.1rem;
+    font-size: 1.25rem;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  nav.main-nav .nav-item .nav-link {
+    font-size: 1.563rem;
+    font-weight: 500;
+    letter-spacing: -0.02rem;
+    line-height: 2;
   }
 }
 
 nav.main-nav .active {
+  font-size: 0.9rem;
   font-weight: 700;
+  letter-spacing: 0.01rem;
+  line-height: 1;
   color: #4aa570;
+}
+
+@media screen and (max-width: 600px) {
+  nav.main-nav .active {
+    font-size: 1.25rem;
+  }
 }
 
 nav.main-nav .active .nav-link {
@@ -537,12 +671,46 @@ nav.main-nav .active .nav-link {
   font-weight: inherit;
 }
 
+.nav-pills {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+@media screen and (max-width: 600px) {
+  .nav-pills {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
 .nav-pills .nav-link.nav-link {
   font-size: 1rem;
   font-weight: 700;
   letter-spacing: -0.01rem;
   line-height: 2;
-  color: rgba(0, 0, 0, 0.38);
+  color: #9e9e9e;
 }
 
 @media screen and (max-width: 600px) {
@@ -551,13 +719,28 @@ nav.main-nav .active .nav-link {
   }
 }
 
+.nav-pills .nav-link.nav-link svg,
+.nav-pills .nav-link.nav-link span {
+  vertical-align: middle;
+}
+
+.nav-pills .nav-link.nav-link svg + span {
+  margin-left: 0.375rem;
+}
+
 .nav-pills .nav-divider.nav-divider.nav-divider {
   font-size: 1.25rem;
   font-weight: 700;
   letter-spacing: -0.02rem;
   line-height: 2;
-  color: rgba(0, 0, 0, 0.38);
+  color: #9e9e9e;
   pointer-events: none;
+}
+
+@media screen and (max-width: 600px) {
+  .nav-pills .nav-divider.nav-divider.nav-divider {
+    display: none;
+  }
 }
 
 .nav-pills .more.more {
@@ -570,6 +753,12 @@ nav.main-nav .active .nav-link {
 @media screen and (max-width: 600px) {
   .nav-pills .more.more {
     font-size: 1.25rem;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .nav-pills .more.more {
+    display: none;
   }
 }
 
@@ -595,8 +784,8 @@ nav.main-nav .active .nav-link {
   }
   .navbar-collapse.collapsing {
     left: -75%;
-    -webkit-transition: height 0s ease-out;
-    transition: height 0s ease-out;
+    -webkit-transition: left 0s ease-out;
+    transition: left 0s ease-out;
   }
   .navbar-collapse.collapsing .navbar-collapse.show {
     left: 0;
@@ -780,9 +969,9 @@ nav.main-nav .active .nav-link {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   font-size: 0.9rem;
   font-weight: 500;
   letter-spacing: 0.01rem;
@@ -791,7 +980,20 @@ nav.main-nav .active .nav-link {
 
 @media screen and (max-width: 600px) {
   .banner-title {
-    font-size: 1.1rem;
+    font-size: 1.25rem;
+  }
+}
+
+.banner-summary {
+  margin-left: 0.75rem;
+}
+
+@media screen and (max-width: 600px) {
+  .banner-summary {
+    max-width: 60%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
 
@@ -801,6 +1003,12 @@ nav.main-nav .active .nav-link {
 
 .banner button.button {
   margin-left: 0.375rem;
+}
+
+@media screen and (max-width: 600px) {
+  .banner button.button {
+    display: none;
+  }
 }
 
 /**
@@ -816,6 +1024,14 @@ nav.main-nav .active .nav-link {
   border-color: #e6e6e6;
 }
 
+@media screen and (max-width: 600px) {
+  .custom-dropdown-menu {
+    -webkit-box-shadow: none;
+            box-shadow: none;
+    border: none;
+  }
+}
+
 .custom-dropdown-menu .custom-dropdown-item {
   font-size: 0.9rem;
   font-weight: 400;
@@ -827,7 +1043,16 @@ nav.main-nav .active .nav-link {
 
 @media screen and (max-width: 600px) {
   .custom-dropdown-menu .custom-dropdown-item {
-    font-size: 1.1rem;
+    font-size: 1.25rem;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .custom-dropdown-menu .custom-dropdown-item {
+    font-size: 1.563rem;
+    font-weight: 500;
+    letter-spacing: -0.02rem;
+    line-height: 2;
   }
 }
 
@@ -924,7 +1149,7 @@ nav.main-nav .active .nav-link {
   font-weight: 500;
   letter-spacing: -0.01rem;
   line-height: 1.5;
-  color: rgba(0, 0, 0, 0.38);
+  color: #9e9e9e;
   margin-bottom: 0.375rem;
 }
 
@@ -1005,7 +1230,7 @@ nav.main-nav .active .nav-link {
   font-weight: 500;
   letter-spacing: -0.01rem;
   line-height: 1.3;
-  color: rgba(0, 0, 0, 0.38);
+  color: #9e9e9e;
 }
 
 @media screen and (max-width: 600px) {
@@ -1038,6 +1263,7 @@ nav.main-nav .active .nav-link {
 }
 
 .badge {
+  border-radius: 3.75rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1055,7 +1281,7 @@ nav.main-nav .active .nav-link {
   display: -ms-inline-flexbox;
   display: inline-flex;
   font-size: 0.9rem;
-  font-weight: 500;
+  font-weight: 700;
   letter-spacing: 0.01rem;
   line-height: 1;
 }
@@ -1067,7 +1293,7 @@ nav.main-nav .active .nav-link {
 
 @media screen and (max-width: 600px) {
   .badge {
-    font-size: 1.1rem;
+    font-size: 1.25rem;
   }
 }
 
@@ -1085,13 +1311,15 @@ nav.main-nav .active .nav-link {
 
 .table thead th,
 .table thead td {
-  background-color: #e6e6e6;
+  background-color: #ebebeb;
   padding: 0.75rem;
   font-size: 1.25rem;
-  font-weight: 700;
+  font-weight: 500;
   letter-spacing: -0.02rem;
   line-height: 1.75;
   color: #2e2e31;
+  word-wrap: break-word;
+  vertical-align: middle;
 }
 
 .table tbody th,
@@ -1103,6 +1331,8 @@ nav.main-nav .active .nav-link {
   letter-spacing: -0.02rem;
   line-height: 2;
   color: #535353;
+  word-wrap: break-word;
+  vertical-align: middle;
 }
 
 .table tbody th {
@@ -1131,14 +1361,14 @@ nav.main-nav .active .nav-link {
 
 footer {
   width: 100%;
-  background-color: #ffffff;
+  background-color: #eeeeee;
 }
 
 footer .footer-inner {
   max-width: 1024px;
   margin-right: auto;
   margin-left: auto;
-  padding: 2.25rem;
+  padding: 3.75rem 2.25rem;
 }
 
 footer .row + .row {
@@ -1148,44 +1378,114 @@ footer .row + .row {
 footer .footer-group .footer-group-title a,
 footer .footer-group .footer-group-title p,
 footer .footer-group .footer-group-list a,
-footer .footer-group .footer-group-list-company-info a,
+footer .footer-group .footer-group-social-group-list a,
 footer .footer-group .footer-group-list p,
-footer .footer-group .footer-group-list-company-info p {
+footer .footer-group .footer-group-social-group-list p {
   font-size: inherit;
 }
 
-footer .footer-group .footer-group-title {
+footer .footer-group-title {
   margin-bottom: 0.375rem;
   color: #535353;
   font-size: 0.9rem;
-  font-weight: 500;
+  font-weight: 700;
   letter-spacing: 0.01rem;
-  line-height: 1.3;
+  line-height: 2;
 }
 
 @media screen and (max-width: 600px) {
-  footer .footer-group .footer-group-title {
-    font-size: 1.1rem;
+  footer .footer-group-title {
+    font-size: 1.25rem;
   }
 }
 
-footer .footer-group .footer-group-list, footer .footer-group .footer-group-list-company-info {
+footer .footer-group-list, footer .footer-group-social-group-list {
   padding: 0.5625rem 0;
   font-size: 0.9rem;
-  font-weight: 400;
+  font-weight: 500;
   letter-spacing: 0.01rem;
-  line-height: 1.5;
+  line-height: 1.75;
 }
 
 @media screen and (max-width: 600px) {
-  footer .footer-group .footer-group-list, footer .footer-group .footer-group-list-company-info {
-    font-size: 1.1rem;
+  footer .footer-group-list, footer .footer-group-social-group-list {
+    font-size: 1.25rem;
   }
 }
 
-footer .footer-group .footer-group-list-company-info {
+footer .footer-group-company-info {
+  font-size: 0.9rem;
+  font-weight: 500;
+  letter-spacing: 0.01rem;
+  line-height: 2;
   padding: 0;
-  color: rgba(0, 0, 0, 0.38);
+  color: #9e9e9e;
+}
+
+@media screen and (max-width: 600px) {
+  footer .footer-group-company-info {
+    font-size: 1.25rem;
+  }
+}
+
+footer .footer-group-social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+footer .footer-group-social-group-list {
+  font-size: 0.9rem;
+  font-weight: 500;
+  letter-spacing: 0.01rem;
+  line-height: 2;
+}
+
+@media screen and (max-width: 600px) {
+  footer .footer-group-social-group-list {
+    font-size: 1.25rem;
+  }
+}
+
+footer .footer-group-social-group-list span {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  width: 2.25rem;
+  height: 2.25rem;
+  border-radius: 100%;
+  background-color: #535353;
+}
+
+footer .footer-group-social-group-list span svg {
+  color: #ffffff;
+}
+
+footer .footer-group-social li + li {
+  margin-left: 0.75rem;
 }
 
 .cta-image {
@@ -1201,12 +1501,12 @@ footer .footer-group .footer-group-list-company-info {
   font-weight: 500;
   letter-spacing: 0.01rem;
   line-height: 1;
-  color: rgba(0, 0, 0, 0.38);
+  color: #9e9e9e;
 }
 
 @media screen and (max-width: 600px) {
   .cta-caption {
-    font-size: 1.1rem;
+    font-size: 1.25rem;
   }
 }
 /*# sourceMappingURL=main.css.map */
