--- a/themes/zuzu/static/scss/abstract/_variable.scss
+++ b/themes/zuzu/static/scss/abstract/_variable.scss
@@ -13,7 +13,7 @@ $bodyText: #535353;
 $buttonStroke: #21575a;
 $disabledBackground: #dddddd;
 $disabledButtonBackground: #dddddd;
-$disabledText: rgba(0, 0, 0, 0.38);
+$disabledText: #9e9e9e;
 $hr: #e6e6e6;
 $materialInputBackground: #f5f5f5;
 $pageBackground: #eaecf0;
