--- a/themes/zuzu/static/scss/components/_banner.scss
+++ b/themes/zuzu/static/scss/components/_banner.scss
@@ -3,8 +3,19 @@
     @include flex(row, center, flex-start);
     padding: $baseUnit $baseUnit * 3;
     &-title {
-        @include flex(row, center, flex-start);
+        @include flex(row, center, space-between);
         @include caption(1, $medium);
+        @at-root {
+            .banner-summary {
+                margin-left: $baseUnit;
+                @include media-break-point-down {
+                    max-width: 60%;
+                    white-space: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                }
+            }
+        }
         & > *:last-child {
             margin-left: $baseUnit * 0.5;
         }
@@ -13,5 +24,8 @@
     color: $bodyText;
     button.button {
         margin-left: $baseUnit * 0.5;
+        @include media-break-point-down {
+            display: none;
+        }
     }
 }
