--- a/themes/zuzu/static/scss/components/_dropdown.scss
+++ b/themes/zuzu/static/scss/components/_dropdown.scss
@@ -10,9 +10,16 @@
     border-radius: $baseUnit * 0.75;
     @include box-shadow-e-1;
     border-color: $hr;
+    @include media-break-point-down {
+        box-shadow: none;
+        border: none;
+    }
 
     .custom-dropdown-item {
         @include caption(1, $regular);
+        @include media-break-point-down {
+            @include heading4(2, $medium);
+        }
         padding: $baseUnit $baseUnit * 3;
         color: $bodyText;
         &:active {
