--- a/themes/zuzu/static/scss/components/_table.scss
+++ b/themes/zuzu/static/scss/components/_table.scss
@@ -3,18 +3,14 @@
     thead {
         th,
         td {
-            background-color: $hr;
+            background-color: lighten($hr, 2);
             padding: $baseUnit;
-            @include heading5(1.75, $bold);
+            @include heading5(1.75, $medium);
             color: $subtitleText;
+            word-wrap: break-word;
+            vertical-align: middle;
         }
-        // TO DO ADD BORDER RADIUS
-        // th:first-child {
-        //     border-top-left-radius: $baseUnit * 0.75;
-        // }
-        // th:last-child {
-        //     border-top-right-radius: $baseUnit * 0.75;
-        // }
+        // TO DO: ADD BORDER RADIUS
     }
     tbody {
         th,
@@ -23,6 +19,8 @@
             vertical-align: middle;
             @include heading5(2, $medium);
             color: $bodyText;
+            word-wrap: break-word;
+            vertical-align: middle;
         }
         th {
             background-color: lighten($hr, 5);
