--- a/themes/zuzu/static/scss/layout/_footer.scss
+++ b/themes/zuzu/static/scss/layout/_footer.scss
@@ -1,12 +1,12 @@
 footer {
   width: 100%;
-  background-color: $white;
+  background-color: lighten($hr, 3);
 
   .footer-inner {
     max-width: 1024px;
     margin-right: auto;
     margin-left: auto;
-    padding: $baseUnit * 3;
+    padding: $baseUnit * 5 $baseUnit * 3;
   }
 
   .row + .row {
@@ -21,19 +21,40 @@ footer {
         font-size: inherit;
       }
     }
-    .footer-group-title {
+    &-title {
       margin-bottom: $baseUnit * 0.5;
       color: $bodyText;
-      @include caption(1.3, $medium);
+      @include caption(2, $bold);
     }
-    .footer-group-list {
+    &-list {
       padding: $baseUnit * 0.75 0;
-      @include caption(1.5, $regular);
+      @include caption(1.75, $medium);
     }
-    .footer-group-list-company-info {
-      @extend .footer-group-list;
+    &-company-info {
+      @include caption(2, $medium);
       padding: 0;
       color: $disabledText;
+    }
+    &-social {
+      @include flex(row, center, flex-start);
+      &-group-list {
+        @extend .footer-group-list;
+        @include caption(2, $medium);
+        span {
+          @include flex(row, center, center);
+          display: inline-flex;
+          width: $baseUnit * 3;
+          height: $baseUnit * 3;
+          border-radius: 100%;
+          background-color: $bodyText;
+          svg {
+            color: $white;
+          }
+        }
+      }
+      li + li {
+        margin-left: $baseUnit;
+      }
     }
   }
 }
