hide some buttons

--- a/themes/zuzu/layouts/partials/header/banner.html
+++ b/themes/zuzu/layouts/partials/header/banner.html
@@ -5,10 +5,10 @@
                 <div class="badge badge-primary">UPDATE</div>
                 <div class=banner-summary>{{.Site.Data.banner.banner.title}}</div>
             </div>
-            <button class="button button-tertiary button-small" onclick="location.href={{.Site.Data.banner.banner.link}}">
+            <!-- <button class="button button-tertiary button-small" onclick="location.href={{.Site.Data.banner.banner.link}}">
                 <span>자세히 보기</span>
                 <i data-feather="chevron-right" width="14" stroke-width="3" class="with-animation"></i>
-            </button>
+            </button> -->
         </div>
     </div>
 </div>
