--- a/themes/zuzu/layouts/partials/section/voucher.html
+++ b/themes/zuzu/layouts/partials/section/voucher.html
@@ -4,11 +4,10 @@
             <img src="/assets/images/pack/SprintingDoodle.svg" alt="비대면바우처" class="custom-icon-160 panel-medium-image">
             <div class="panel-medium-text-wrapper">
                 <h5 class="panel-medium-title">
-                    주주가 비대면 바우처 공급 기업으로 선정되었어요!🎉
+                    주주가 비대면 바우처 공급 기업으로 선정되었어요 🎉
                 </h5>
                 <p class="panel-medium-subtitle">
-                    비대면 바우처 수요기업이라면 10배 이득인 법인 등기해보세요.
-                    <br>지난 1달간 102분의 대표님이 주주 바우처 쿠폰을 구매하셨어요♥️
+                    지금까지 281분의 대표님이 주주 비대면 바우처 쿠폰을 구매하셨어요♥️
                 </p>
             </div>
         </div>
