--- a/themes/zuzu/layouts/partials/section/main/feature.html
+++ b/themes/zuzu/layouts/partials/section/main/feature.html
@@ -6,7 +6,7 @@
       </h4>
     </div>
     <div class="row down-sm-row-reverse justify-content-center">
-      <div class="col-md-2">
+      <div class="col-md-2 col-sm-12">
         <div class="nav nav-pills" id="v-pills-tab" role="tablist"
           aria-orientation="vertical">
           <a class="nav-link nav-divider" data-toggle="pill" role="tab"
@@ -47,7 +47,7 @@
         </div>
       </div>
 
-      <div class="col-md-10">
+      <div class="col-md-10 col-sm-12">
         <!-- STOCKOPTION DETAIL STARTS -->
         <div class="tab-content" id="v-pills-tabContent">
           <div class="tab-pane fade show active" id="v-pills-home"
